--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Web Development Debugging Exercise</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="container">
-            <h2>Flexbox Debugging</h2>
-            <div clas="box">Box 1 - Check the class.</div> <!-- Typo in class attribute -->
-            <div class="box" style="padding: 40px;">Box 2 - Inline styles can override.</div>
-            <div class="box special">Special Box - Overriding ruleset.</div>
-            <div class="flex-item">Flex Item 1 - Flexbox issue.</div>
-            <div class="flex-item">Flex Item 2 - Flexbox issue.</div>
-        </div>
-    </body>
+<head>
+    <title>Web Development Debugging Exercise</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Flexbox Debugging</h1>
+        <div clas="box">This should be a green box with a black border.</div>
+        <div class="box" style="padding: 40px;">This should also be a green box with a black border, but with more padding.</div>
+        <div class="box">This should be a yellow box with a dotted border.</div>
+
+        <div class="flex-item">Box #1 - This should be to the left of Box #2.</div>
+        <div class="flex-item">Box #2 - This should be to the right of Box #1.</div>
+    </div>
+</body>
 </html>
