--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development Debugging Exercise</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,6 +15,43 @@
 
         <div class="flex-item">Box #1 - This should be to the left of Box #2.</div>
         <div class="flex-item">Box #2 - This should be to the right of Box #1.</div>
+
+        <!-- Stretch Goal: Sidebar -->
+        <aside class="sidebar">
+            <h2>Related Articles</h2>
+            <p>Article 1: Understanding Flexbox</p>
+            <p>Article 2: CSS Grid vs Flexbox</p>
+            <!-- Additional sidebar content -->
+        </aside>
+
+        <!-- Stretch Goal: Feature Section -->
+        <section class="feature-section">
+            <h2>Featured Content</h2>
+            <div class="feature-item">
+                <img src="cat.jpg" alt="Feature Image">
+                <p>This is a feature item with text over an image.</p>
+            </div>
+            <!-- Additional featured content -->
+        </section>
+
+        <!-- Stretch Goal: Multi-Column Footer -->
+        <footer class="footer">
+            <div class="footer-column">
+                <h3>Contact Us</h3>
+                <p>Email: info@example.com</p>
+                <p>Phone: 123-456-7890</p>
+            </div>
+            <div class="footer-column">
+                <h3>Follow Us</h3>
+                <p>Twitter</p>
+                <p>Facebook</p>
+            </div>
+            <div class="footer-column">
+                <h3>Links</h3>
+                <p>About Us</p>
+                <p>Privacy Policy</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
