--- a/index.html
+++ b/index.html
@@ -1,58 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Development Debugging Exercise</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1>Flexbox Debugging</h1>
-        <div class="box">This should be a green box with a black border.</div>
-        <div class="box" id="more-padding">This should also be a green box with a black border, but with more padding.</div>
-        <div class="box" id="yellow-box">This should be a yellow box with a dotted border.</div>
+      <h1>Flexbox Debugging</h1>
+      <div class="box">This should be a green box with a black border.</div>
+      <div class="box" id="more-padding">
+        This should also be a green box with a black border, but with more
+        padding.
+      </div>
+      <div class="box" id="yellow-box">
+        This should be a yellow box with a dotted border.
+      </div>
 
-        <!--We created a flex container that groups both the boxes so we can align them properly -->
-         <div class="flex-container">
-                <div class="flex-item">Box #1 - This should be to the left of Box #2.</div>
-                <div class="flex-item">Box #2 - This should be to the right of Box #1.</div>
+      <!--We created a flex container that groups both the boxes so we can align them properly -->
+      <div class="flex-container">
+        <div class="flex-item">
+          Box #1 - This should be to the left of Box #2.
+        </div>
+        <div class="flex-item">
+          Box #2 - This should be to the right of Box #1.
+        </div>
+      </div>
+
+      <!-- Stretch Goal: Feature Section -->
+      <section class="feature-section">
+        <h2>Featured Content</h2>
+        <div class="feature-container">
+          <div class="feature-item">
+            <img src="cat.jpg" alt="Feature Image" />
+            <p class="centered-text">
+              This is a feature item with text over an image.
+            </p>
+          </div>
+
+          <div class="feature-item">
+            <img src="dog.jpg" alt="Feature Image" />
+            <p class="centered-text">
+              This is another feature item with text over an image.
+            </p>
+          </div>
         </div>
 
-        <!-- Stretch Goal: Feature Section -->
-        <section class="feature-section">
-            <h2>Featured Content</h2>
-            <div class ="feature-container">
-                <div class="feature-item">
-                <img src="cat.jpg" alt="Feature Image">
-                <p class="centered-text">This is a feature item with text over an image.</p>
-            </div>
-                <div class="feature-item">
-                <img src="dog.jpg" alt="Feature Image">
-                <p class="centered-text">This is another feature item with text over an image.</p>
-            </div>
+        <!-- Additional featured content -->
+      </section>
 
-            <!-- Additional featured content -->
-        </section>
-
-        <!-- Stretch Goal: Multi-Column Footer -->
-        <footer class="footer">
-            <div class="footer-column">
-                <h3>Contact Us</h3>
-                <p>Email: info@example.com</p>
-                <p>Phone: 123-456-7890</p>
-            </div>
-            <div class="footer-column">
-                <h3>Follow Us</h3>
-                <p>Twitter</p>
-                <p>Facebook</p>
-            </div>
-            <div class="footer-column">
-                <h3>Links</h3>
-                <p>About Us</p>
-                <p>Privacy Policy</p>
-            </div>
-        </footer>
+      <!-- Stretch Goal: Multi-Column Footer -->
+      <footer class="footer">
+        <div class="footer-column">
+          <h3>Contact Us</h3>
+          <p>Email: info@example.com</p>
+          <p>Phone: 123-456-7890</p>
+        </div>
+        <div class="footer-column">
+          <h3>Follow Us</h3>
+          <p>Twitter</p>
+          <p>Facebook</p>
+        </div>
+        <div class="footer-column">
+          <h3>Links</h3>
+          <p>About Us</p>
+          <p>Privacy Policy</p>
+        </div>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
